--- a/qdrant-landing/themes/qdrant-24/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/main.scss
@@ -1,6 +1,6 @@
 @use 'sass:math';
-@import "satoshi-font";
-@import "bootstrap-custom";
+@import 'satoshi-font';
+@import 'bootstrap-custom';
 
 body {
   background: $neutral-90;
