--- a/qdrant-landing/themes/qdrant-24/layouts/debug-skip/list.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/debug-skip/list.html
@@ -1,5 +1,3 @@
-{{ define "main" }}
-{{ range .Data.Pages }}
-    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-{{ end }}
-{{ end }}
+{{ define "main" }} {{ range .Data.Pages }}
+<h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+{{ end }} {{ end }}
