--- a/qdrant-landing/themes/qdrant-24/layouts/partials/head.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/partials/head.html
@@ -1,16 +1,10 @@
-{{ $opts := dict
-"transpiler" "dartsass"
-"enableSourceMap" (not hugo.IsProduction)
-}}
+{{ $opts := dict "transpiler" "dartsass" "enableSourceMap" (not hugo.IsProduction) }}
 <head>
-    <meta charset="UTF-8" />
-    <title>Title</title>
+  <meta charset="UTF-8" />
+  <title>Title</title>
 
-    {{ with resources.Get "css/main.scss" | toCSS $opts | minify | fingerprint }}
-    <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
-    {{ end }}
-
-    {{ $pageSearchCss := resources.Get "/css/qdrant-page-search.css" | resources.Fingerprint "sha512" }}
-    <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}">
-
+  {{ with resources.Get "css/main.scss" | toCSS $opts | minify | fingerprint }}
+  <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
+  {{ end }} {{ $pageSearchCss := resources.Get "/css/qdrant-page-search.css" | resources.Fingerprint "sha512" }}
+  <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}" />
 </head>
