--- a/qdrant-landing/themes/qdrant-24/assets/css/_theme-variables.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/_theme-variables.scss
@@ -84,29 +84,27 @@ $theme-colors: (
 
 $body-bg: $neutral-98;
 
-// Typography
-//
-// Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif: 'Satoshi', 'Helvetica Neue', 'Noto Sans', 'Liberation Sans', Arial, sans-serif,
   'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 $font-family-monospace: 'Azeret Mono', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
   monospace;
-// stylelint-enable value-keyword-case
 $font-family-base: 'Satoshi', 'Helvetica Neue', 'Noto Sans', 'Liberation Sans', Arial, sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 $font-family-code: 'Azeret Mono', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 
-// $font-size-root affects the value of `rem`, which is used for as well font sizes, paddings, and margins
-// $font-size-base affects the font size of the body text
-$font-size-root: null !default;
-$font-size-base: 1rem !default; // Assumes the browser default, typically `16px`
-$font-size-sm: rem(12);
-$font-size-lg: rem(18);
+$font-size-xs: rem(12);
+$font-size-s: rem(14);
+$font-size-md: rem(16);
+$font-size-l: rem(18);
+$font-size-xl: rem(20);
+
+// bootstrap
+$font-size-sm: $font-size-s;
+$font-size-lg: $font-size-l;
 
 $font-weight-base: $font-weight-medium;
 
-$line-height-base: 2;
 $line-height-sm: rem(21);
 $line-height-lg: rem(27);
 
