--- a/qdrant-landing/themes/qdrant-24/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/partials/menu.html
@@ -2,27 +2,27 @@
     {{ partial "logo.html" . }}
     <ul class="main-menu__links">
         <li class="main-menu__item">
-            <a>Product</a>
+            <a class="menu-link" href="#">Product</a>
         </li>
         <li class="main-menu__item">
-            <a>Developers</a>
+            <a class="menu-link" href="#">Developers</a>
         </li>
         <li class="main-menu__item">
-           <a>Community</a>
+           <a class="menu-link" href="#">Community</a>
         </li>
         <li class="main-menu__item">
-            <a>Pricing</a>
+            <a class="menu-link" href="#">Pricing</a>
         </li>
         <li class="main-menu__item">
-            <a>Company</a>
+            <a class="menu-link" href="#">Company</a>
         </li>
     </ul>
-    <div class="menu__buttons">
-        <div class="menu-link-7">
-            <span class="menu-link-log-in">Log in</span>
-        </div>
-        <button class="button">
-            <span class="try-free">Try Free</span>
+    <div class="main-menu__buttons">
+        <a class="menu-link">
+            Log in
+        </a>
+        <button class="button button_contained button_sm">
+            Try Free
         </button>
     </div>
 </div>
