--- a/qdrant-landing/themes/qdrant-24/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/index.html
@@ -7,6 +7,9 @@
         {{ partial "top-banner" . }}
         {{ partial "menu" . }}
     </header>
+    <div class="pt-5">
+        
+    </div>
 </main>
 {{ $pageSearchScrollJs := resources.Get "/js/qdrant-page-search-scroll.min.js" | resources.Fingerprint "sha512" }}
 <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
