--- a/qdrant-landing/themes/qdrant-24/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/main.scss
@@ -6,3 +6,8 @@
 @import "partials/top-banner";
 @import "partials/menu";
 @import "partials/buttons";
+@import "partials/hero";
+
+.main-header {
+  background: $neutral-10;
+}
