--- a/qdrant-landing/themes/qdrant-24/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/partials/menu.html
@@ -18,7 +18,7 @@
         </li>
     </ul>
     <div class="main-menu__buttons">
-        <a class="menu-link">
+        <a class="menu-link mx-3">
             Log in
         </a>
         <button class="button button_contained button_sm">
