--- a/qdrant-landing/themes/qdrant-24/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/partials/hero.html
@@ -5,11 +5,10 @@
         </h1>
         <p class="hero__subtitle">Powering the next generation of AI applications with advanced, high-performant vector similarity search technology.</p>
         <div class="hero__buttons">
-            <a href="#" class="button button_contained button_lg mr-3">Start Free</a>
+            <a href="#" class="button button_contained button_lg">Start Free</a>
             <a href="#" class="button button_outlined button_lg">Learn More</a>
         </div>
     </div>
     <div class="hero__badges">
-
     </div>
 </section>
