--- a/qdrant-landing/themes/qdrant-24/assets/css/partials/_top-banner.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/partials/_top-banner.scss
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
   gap: 24px;
-  border-bottom: 1px solid var(--Neutral-N20, #161E33);
-  background: var(--Neutral-N10, #090E1A);
+  border-bottom: 1px solid var(--Neutral-N20, #161e33);
+  background: var(--Neutral-N10, #090e1a);
 
   &__icon {
     color: $secondary-blue-50;
