--- a/qdrant-landing/themes/qdrant-24/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/main.scss
@@ -2,11 +2,11 @@
 @import 'satoshi-font';
 @import 'bootstrap-custom';
 
-@import "partials/logo";
-@import "partials/top-banner";
-@import "partials/menu";
-@import "partials/buttons";
-@import "partials/hero";
+@import 'partials/logo';
+@import 'partials/top-banner';
+@import 'partials/menu';
+@import 'partials/buttons';
+@import 'partials/hero';
 
 .main-header {
   background: $neutral-10;
