--- a/qdrant-landing/themes/qdrant-24/assets/css/partials/_buttons.scss
+++ b/qdrant-landing/themes/qdrant-24/assets/css/partials/_buttons.scss
@@ -1,19 +1,19 @@
-@use "../helpers/functions" as *;
+@use '../helpers/functions' as *;
 
 .button {
   // VARIABLES
   $gradient: linear-gradient(180deg, $primary-50, $primary-40);
 
   $height: (
-          sm: 36px,
-          md: 40px,
-          lg: 48px
+    sm: 36px,
+    md: 40px,
+    lg: 48px,
   );
 
   $padding: (
-          sm: 0 rem(20),
-          md: 0 rem(22),
-          lg: 0 rem(28)
+    sm: 0 rem(20),
+    md: 0 rem(22),
+    lg: 0 rem(28),
   );
 
   // STYLES
@@ -33,7 +33,6 @@
   font-weight: 700;
   font-size: map-get($font-sizes-text, md);
 
-
   // VARIANTS
   &_contained {
     background: $gradient;
@@ -47,8 +46,9 @@
 
     &:active {
       background: $primary-50;
-      box-shadow: 0 2px 1px 0 $primary-60 inset,
-      0 0 0 2px rgba(220, 36, 76, 0.40);
+      box-shadow:
+        0 2px 1px 0 $primary-60 inset,
+        0 0 0 2px rgba(220, 36, 76, 0.4);
     }
 
     &.button_disabled,
@@ -64,7 +64,7 @@
     box-sizing: border-box;
 
     &:hover {
-      box-shadow: 0 0 0 2px #B4BACC;
+      box-shadow: 0 0 0 2px #b4bacc;
     }
 
     &:active {
