--- a/qdrant-landing/themes/qdrant-24/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/partials/menu.html
@@ -1,28 +1,24 @@
 <div class="main-menu">
-    {{ partial "logo.html" . }}
-    <ul class="main-menu__links">
-        <li class="main-menu__item">
-            <a class="menu-link" href="#">Product</a>
-        </li>
-        <li class="main-menu__item">
-            <a class="menu-link" href="#">Developers</a>
-        </li>
-        <li class="main-menu__item">
-           <a class="menu-link" href="#">Community</a>
-        </li>
-        <li class="main-menu__item">
-            <a class="menu-link" href="#">Pricing</a>
-        </li>
-        <li class="main-menu__item">
-            <a class="menu-link" href="#">Company</a>
-        </li>
-    </ul>
-    <div class="main-menu__buttons">
-        <a class="menu-link mx-3">
-            Log in
-        </a>
-        <button class="button button_contained button_sm">
-            Try Free
-        </button>
-    </div>
+  {{ partial "logo.html" . }}
+  <ul class="main-menu__links">
+    <li class="main-menu__item">
+      <a class="menu-link" href="#">Product</a>
+    </li>
+    <li class="main-menu__item">
+      <a class="menu-link" href="#">Developers</a>
+    </li>
+    <li class="main-menu__item">
+      <a class="menu-link" href="#">Community</a>
+    </li>
+    <li class="main-menu__item">
+      <a class="menu-link" href="#">Pricing</a>
+    </li>
+    <li class="main-menu__item">
+      <a class="menu-link" href="#">Company</a>
+    </li>
+  </ul>
+  <div class="main-menu__buttons">
+    <a class="menu-link mx-3"> Log in </a>
+    <button class="button button_contained button_sm">Try Free</button>
+  </div>
 </div>
