--- a/qdrant-landing/themes/qdrant-24/layouts/partials/svg.html
+++ b/qdrant-landing/themes/qdrant-24/layouts/partials/svg.html
@@ -1,3 +1,1 @@
-{{ $path := "icons/outline/" }}
-{{ $filename := . }}
-{{ readFile (printf "%s%s" $path $filename) | safeHTML }}
+{{ $path := "icons/outline/" }} {{ $filename := . }} {{ readFile (printf "%s%s" $path $filename) | safeHTML }}
