--- a/qdrant-landing/themes/qdrant/static/css/mixins/_mixins.scss
+++ b/qdrant-landing/themes/qdrant/static/css/mixins/_mixins.scss
@@ -58,6 +58,9 @@
 
   pre, pre span, pre code {
     font-size: lib.rem(16);
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-weight: 400;
+    line-height: lib.rem(24);
   }
 
   iframe {
