--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en">
   {{ partial "head.html" . }}
+
   <body>
     <main>
       <header class="main-header">
         {{ with (.Site.GetPage "section" "top-banner") }} {{ partial "top-banner" . }} {{ end }} {{ partial "menu" . }}
-        {{ partial "hero" . }}
+        {{ with (.Site.GetPage "hero") }} {{ partial "hero" . }} {{ end }}
       </header>
     </main>
-    
-    {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+
+    {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512"
+    }}
     <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
   </body>
 </html>
