--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
@@ -3,16 +3,11 @@
   <meta charset="UTF-8" />
   <title>Title</title>
 
-  {{ $opts := dict
-    "transpiler" "dartsass"
-    "includePaths" (slice "node_modules")
-  }}
-
-  {{ with resources.Get "css/main.scss" | toCSS $opts | minify | fingerprint }}
+  {{ $opts := dict "transpiler" "dartsass" "includePaths" (slice "node_modules") }} {{ with resources.Get
+  "css/main.scss" | toCSS $opts | minify | fingerprint }}
   <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
-  {{ end }}
-  
-  {{ $pageSearchCss := resources.Get "css/search/search.scss" | toCSS $opts | minify | resources.Fingerprint "sha512" }}
+  {{ end }} {{ $pageSearchCss := resources.Get "css/search/search.scss" | toCSS $opts | minify | resources.Fingerprint
+  "sha512" }}
   <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}" />
 
   <!-- todo -->
