--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hero.html
@@ -1,13 +1,10 @@
 <section class="hero">
   <div class="hero__content">
-    <h1 class="hero__title">High-Performance Vector Search at Scale</h1>
-    <p class="hero__subtitle">
-      Powering the next generation of AI applications with advanced, high-performant vector similarity search
-      technology.
-    </p>
+    <h1 class="hero__title">{{ .Params.title }}</h1>
+    <p class="hero__subtitle">{{ .Params.subtitle }}</p>
     <div class="hero__buttons">
-      <a href="#" class="button button_contained button_lg">Start Free</a>
-      <a href="#" class="button button_outlined button_lg">Learn More</a>
+      <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">{{ .Params.startFree.text }}</a>
+      <a href="{{ .Params.learnMore.url }}" class="button button_outlined button_lg">{{ .Params.learnMore.text }}</a>
     </div>
   </div>
   <div class="hero__badges"></div>
