add customers section

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -4,6 +4,7 @@
 
 @import 'partials/logo';
 @import 'partials/top-banner';
+@import 'partials/customers';
 @import 'partials/menu';
 @import 'partials/buttons';
 @import 'partials/hero';
