--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -10,9 +10,8 @@
         partial "customers" . }} {{ end }}
       </header>
     </main>
-
-    {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512"
-    }}
+    {{ with (.Site.GetPage "core-features") }} {{ partial "core-features" . }} {{ end }} {{ $pageSearchScrollJs :=
+    resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
     <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
   </body>
 </html>
