--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -8,6 +8,7 @@
 @import 'partials/menu';
 @import 'partials/buttons';
 @import 'partials/hero';
+@import 'partials/core-features';
 
 .main-header {
   background: $neutral-10;
