--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_hero.scss
@@ -19,12 +19,14 @@
     text-align: center;
     margin-bottom: $spacer;
     font-size: map-get($font-sizes, 1);
+    line-height: rem(76);
   }
 
   &__subtitle {
     color: $neutral-70;
     text-align: center;
     font-size: map-get($font-sizes-text, 'xl');
+    line-height: rem(30);
     max-width: rem(640);
     margin: 0 auto $spacer * 2;
   }
