add customer-stories section

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -9,6 +9,7 @@
 @import 'partials/buttons';
 @import 'partials/hero';
 @import 'partials/core-features';
+@import 'partials/customer-stories';
 
 .main-header {
   background: $neutral-10;
