fixed docker logo and marqee length on the home page

--- a/qdrant-landing/themes/qdrant/static/css/_colors.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_colors.scss
@@ -6,6 +6,7 @@
   --brand-mid-grey: #D9E2FF;
   --brand-light-grey: #EBF1FF;
   --brand-light: #F4F6FF;
+  --white: #fff;
 
   --neutral-n-50: #F2F6FF;
   --neutral-n-100: #DCE4FA;
