create common link component

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -8,6 +8,7 @@
 @import 'partials/menu';
 @import 'partials/buttons';
 @import 'partials/hero';
+@import 'partials/link';
 @import 'partials/core-features';
 @import 'partials/customer-stories';
 
