--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/core-features.html
@@ -1,10 +1,7 @@
 <section class="core-features">
   <h2 class="core-features__title">{{ .Params.title }}</h2>
   <p class="core-features__description">{{ .Params.description }}</p>
-  <a class="core-features__link" href="{{ .Params.link.url }}">
-    <span>{{ .Params.link.text }}</span>
-    <span class="customers__link-icon">{{ partial "svg" "Arrow-Right-Sm.svg" }}</span>
-  </a>
+  {{ partial "link" . }}
   <div class="core-features__cards">
     {{ range .Params.featureCards }}
     <div class="core-features__card">
@@ -13,7 +10,7 @@
       <p class="core-features__card-content">{{ .content }}</p>
       <a class="core-features__card-link" href="{{ .link.url }}">
         <span>{{ .link.text }}</span>
-        <span class="customers__card-link-icon">{{ partial "svg" "Arrow-Right-Black.svg" }}</span>
+        <span>{{ partial "svg" "Arrow-Right-Black.svg" }}</span>
       </a>
     </div>
     {{ end }}
