make link checker unhappy with local redirects

--- a/qdrant-landing/themes/qdrant/layouts/blog/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/single.html
@@ -89,7 +89,7 @@
     <section class="qb-related row clearfix">
         <header class="col-12 qb-related__title-outer">
             <h2 class="qb-related__title">Related Posts</h2>
-            <a class="qb-related__link" href="/blog">View all blog posts
+            <a class="qb-related__link" href="/blog/">View all blog posts
                 <i>
                     <svg width="14" height="10" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 5H13" stroke="#102252" stroke-width="2" stroke-linecap="round"
