--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -11,6 +11,7 @@
 @import 'partials/link';
 @import 'partials/core-features';
 @import 'partials/customer-stories';
+@import 'partials/docker-deploy';
 
 .main-header {
   background: $neutral-10;
