--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -11,8 +11,9 @@
       </header>
     </main>
     {{ with (.Site.GetPage "core-features") }} {{ partial "core-features" . }} {{ end }} {{ with (.Site.GetPage
-    "customer-stories") }} {{ partial "customer-stories" . }} {{ end }} {{ $pageSearchScrollJs := resources.Get
-    "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+    "customer-stories") }} {{ partial "customer-stories" . }} {{ end }} {{ with (.Site.GetPage "docker-deploy") }} {{
+    partial "docker-deploy" . }} {{ end }} {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build |
+    minify | resources.Fingerprint "sha512" }}
     <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
   </body>
 </html>
