add vectors section

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -12,6 +12,7 @@
 @import 'partials/core-features';
 @import 'partials/customer-stories';
 @import 'partials/docker-deploy';
+@import 'partials/vectors';
 
 .main-header {
   background: $neutral-10;
